--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,17 @@ endpoint.getUserByEmail=/users/emails/{pattern:.+}
 
 #Actions
 endpoint.authenticate=/authenticate
+
+########## DataBase Configuration #########################################
+
+# Database
+db.driver: org.postgresql.Driver
+db.url: jdbc:postgresql://localhost:5432/viseocompanion
+db.username: companion
+db.password: dtsqem3237
+
+# Hibernate
+hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql: true
+hibernate.hbm2ddl.auto: create-drop
+entitymanager.packagesToScan: com.viseo.companion.domain
