Event Service+Test push

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@
 #Events
 endpoint.addEvent=/events 
 endpoint.getEvent=/events/{eventId}
+endpoint.deleteEvent=/events/{eventId}
+endpoint.updateEvent=/events/{eventId}
 endpoint.getEvents=/events
 endpoint.getEventParticipants=/events/{eventId}/users
 endpoint.getEventParticipant=/events/{eventId}/users/{userId}
