--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
+			<artifactId>spring-security-core</artifactId>
 			<version>4.0.3.RELEASE</version>
 		</dependency>
+
 
 		<!-- Test -->
 
