--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ endpoint.getEventsByRegisteredUser=/events/users/{userId}
 endpoint.addUser=/users
 endpoint.getUsers=/users
 endpoint.getUser=/users/{userId}
-endpoint.getUserByEmail=/users/emails/{pattern:.+}
+endpoint.getUserByEmail=/users/email
 
 #Actions
 endpoint.authenticate=/authenticate
