--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		</dependency>
 
 
+
 		<!-- Test -->
 
 		<dependency>
@@ -103,6 +104,11 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-core</artifactId>
 			<version>2.6.3.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>4.3.7.RELEASE</version>
 		</dependency>
 	</dependencies>
 
