controlleur test update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ endpoint.addUser=/users
 endpoint.getUsers=/users
 endpoint.getUser=/users/{userId}
 endpoint.getUserByEmail=/users/email
+endpoint.deleteUser=/users/{userId}
+endpoint.updateUser=/users/{userId}
 
 #Actions
 endpoint.authenticate=/authenticate
