--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ endpoint.getEvent=/events/{eventId}
 endpoint.deleteEvent=/events/{eventId}
 endpoint.updateEvent=/events/{eventId}
 endpoint.getEvents=/events
+
+#Event Participant
 endpoint.getEventParticipants=/events/{eventId}/users
 endpoint.getEventParticipant=/events/{eventId}/users/{userId}
 endpoint.addEventParticipant=/events/{eventId}/users/{userId}
@@ -16,7 +18,7 @@ endpoint.getEventsByRegisteredUser=/events/users/{userId}
 endpoint.addUser=/users
 endpoint.getUsers=/users
 endpoint.getUser=/users/{userId}
-endpoint.getUserByEmail=/users/email
+endpoint.getUserByEmail=/users/emails/{pattern:.+}
 endpoint.deleteUser=/users/{userId}
 endpoint.updateUser=/users/{userId}
 
