--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,12 @@
 			<artifactId>junit-dep</artifactId>
 			<version>4.10</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-httpclient</groupId>
