--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+###############################################################
 ########## REST routes #########################################
 
 #Events
@@ -21,9 +22,22 @@ endpoint.getUser=/users/{userId}
 endpoint.getUserByEmail=/users/emails/{pattern:.+}
 endpoint.deleteUser=/users/{userId}
 endpoint.updateUser=/users/{userId}
+endpoint.resetPassword=/user/resetPassword
 
 #Actions
 endpoint.authenticate=/authenticate
+
+################### JavaMail Configuration ##########################
+support.email=companionviseo@gmail.com
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtps
+spring.mail.username=conpanionviseo
+spring.mail.password=dtsqem3237
+spring.mail.properties.mail.transport.protocol=smtps
+spring.mail.properties.mail.smtps.auth=true
+spring.mail.properties.mail.smtps.starttls.enable=true
+spring.mail.properties.mail.smtps.timeout=2000
 
 ########## DataBase Configuration #########################################
 
