--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,11 @@
 			<version>4.0.3.RELEASE</version>
 		</dependency>
 
-
+		<!-- Email -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<!-- Test -->
 
