Send reset password email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,22 +22,26 @@ endpoint.getUser=/users/{userId}
 endpoint.getUserByEmail=/users/emails/{pattern:.+}
 endpoint.deleteUser=/users/{userId}
 endpoint.updateUser=/users/{userId}
-endpoint.resetPassword=/user/resetPassword
+endpoint.resetPassword=/users/resetPassword
 
 #Actions
 endpoint.authenticate=/authenticate
 
 ################### JavaMail Configuration ##########################
-support.email=companionviseo@gmail.com
+#support.email=companionviseo@gmail.com
+#spring.mail.properties.mail.transport.protocol=smtps
+#spring.mail.properties.mail.smtps.auth=true
+#spring.mail.properties.mail.smtps.starttls.enable=true
+#spring.mail.properties.mail.smtps.timeout=2000
+
+# Email (MailProperties)
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.protocol=smtps
-spring.mail.username=conpanionviseo
 spring.mail.password=dtsqem3237
-spring.mail.properties.mail.transport.protocol=smtps
-spring.mail.properties.mail.smtps.auth=true
-spring.mail.properties.mail.smtps.starttls.enable=true
-spring.mail.properties.mail.smtps.timeout=2000
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=companionviseo@gmail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 ########## DataBase Configuration #########################################
 
