--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,22 +10,23 @@ endpoint.getEvents=/events
 
 #Event Participant
 endpoint.getEventParticipants=/events/{eventId}/users
-endpoint.getEventParticipant=/events/{eventId}/users/{userId}
-endpoint.addEventParticipant=/events/{eventId}/users/{userId}
-endpoint.removeEventParticipant=/events/{eventId}/users/{userId}
-endpoint.getEventsByRegisteredUser=/events/users/{userId}
+endpoint.getEventParticipant=/events/{eventId}/users/{uzerId}
+endpoint.addEventParticipant=/events/{eventId}/users/{uzerId}
+endpoint.removeEventParticipant=/events/{eventId}/users/{uzerId}
+endpoint.getEventsByRegisteredUser=/events/users/{uzerId}
 
 #Users
 endpoint.addUser=/users
 endpoint.getUsers=/users
-endpoint.getUser=/users/{userId}
+endpoint.getUser=/users/{uzerId}
 endpoint.getUserByEmail=/users/emails/{pattern:.+}
-endpoint.deleteUser=/users/{userId}
-endpoint.updateUser=/users/{userId}
-endpoint.resetPassword=/users/resetPassword
+endpoint.deleteUser=/users/{uzerId}
+endpoint.updateUser=/users/{uzerId}
 
 #Actions
 endpoint.authenticate=/authenticate
+endpoint.resetPassword=/resetPassword
+endpoint.changePassword= /changePassword
 
 ################### JavaMail Configuration ##########################
 #support.email=companionviseo@gmail.com
