--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ endpoint.getEvent=/events/{eventId}
 endpoint.deleteEvent=/events/{eventId}
 endpoint.updateEvent=/events/{eventId}
 endpoint.getEvents=/events
+endpoint.getEventsExpired=/events/expire
 
 #Event Participant
 endpoint.getEventParticipants=/events/{eventId}/users
