Fixed some integration error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 endpoint.addEvent=/events
 endpoint.getEvent=/events/{eventId}
 endpoint.deleteEvent=/events/{eventId}
-endpoint.updateEvent=/events/{eventId}
+endpoint.updateEvent=/events
 endpoint.getEvents=/events
 
 #Event Participant
