commentaire evenement back

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,14 @@ endpoint.getUserByEmail=/users/emails/{pattern:.+}
 endpoint.deleteUser=/users/{userId}
 endpoint.updateUser=/users/{userId}
 
+#Commetaire
+endpoint.getComments=/comments
+endpoint.addComment=/comment
+endpoint.getCommentsByEvent=/commentaire/events/{eventId}
+endpoint.deleteComment=/comment/{commentId}
+endpoint.updateComment=/comment/{commentId}
+
+
 #Actions
 endpoint.authenticate=/authenticate
 
