Add event image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ endpoint.deleteEvent=/events/{eventId}
 endpoint.updateEvent=/events
 endpoint.getEvents=/events
 endpoint.getEventsExpired=/events/expire
+endpoint.uploadImage=/upload
 
 #Event Participant
 endpoint.getEventParticipants=/events/{eventId}/users
@@ -44,6 +45,13 @@ spring.mail.protocol=smtp
 spring.mail.username=companionviseo@gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#AWS C
+amazon.s3.bucket=viseo-companion
+aws.region=eu-west-1
+aws.credentials.accessKey=AKIAJFGYUFU4GANDI65Q
+aws.credentials.secretKey=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
+
 
 ########## DataBase Configuration #########################################
 
