--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ endpoint.updateUser=/users/{userId}
 #Commetaire
 endpoint.getComments=/comments
 endpoint.addComment=/comment
-endpoint.getCommentsByEvent=/commentaire/events/{eventId}
+endpoint.getCommentsByEvent=/comment/events/{eventId}
 endpoint.deleteComment=/comment/{commentId}
 endpoint.updateComment=/comment/{commentId}
 
@@ -45,5 +45,5 @@ db.password: dtsqem3237
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: validate
+hibernate.hbm2ddl.auto: create-drop
 entitymanager.packagesToScan: com.viseo.companion.domain
