--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,10 @@ endpoint.updateUser=/users/{userId}
 
 #Commetaire
 endpoint.getComments=/comments
-endpoint.addComment=/comment
-endpoint.getCommentsByEvent=/comment/events/{eventId}
-endpoint.deleteComment=/comment/{commentId}
-endpoint.updateComment=/comment/{commentId}
+endpoint.addComment=/comments
+endpoint.getCommentsByEvent=/comments/events/{eventId}
+endpoint.deleteComment=/comments/{commentId}
+endpoint.updateComment=/comments/{commentId}
 
 
 #Actions
@@ -45,5 +45,5 @@ db.password: dtsqem3237
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: create-drop
+hibernate.hbm2ddl.auto: validate
 entitymanager.packagesToScan: com.viseo.companion.domain
