Revised CRUD methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,12 +23,13 @@ endpoint.getUserByEmail=/users/emails/{pattern:.+}
 endpoint.deleteUser=/users/{userId}
 endpoint.updateUser=/users/{userId}
 
-#Commetaire
-endpoint.getComments=/comments
+#Comments
 endpoint.addComment=/comments
+endpoint.getComment=/comments/{commentId}
+endpoint.getComments=/comments
 endpoint.getCommentsByEvent=/comments/events/{eventId}
 endpoint.deleteComment=/comments/{commentId}
-endpoint.updateComment=/comments/{commentId}
+endpoint.updateComment=/comments
 
 
 #Actions
@@ -45,5 +46,5 @@ db.password: dtsqem3237
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: validate
+hibernate.hbm2ddl.auto: create-drop
 entitymanager.packagesToScan: com.viseo.companion.domain
