Return objects instead of boolean on add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 endpoint.addEvent=/events
 endpoint.getEvent=/events/{eventId}
 endpoint.deleteEvent=/events/{eventId}
-endpoint.updateEvent=/events/{eventId}
+endpoint.updateEvent=/events
 endpoint.getEvents=/events
 endpoint.getEventsExpired=/events/expire
 
@@ -21,7 +21,7 @@ endpoint.getUsers=/users
 endpoint.getUser=/users/{userId}
 endpoint.getUserByEmail=/users/emails/{pattern:.+}
 endpoint.deleteUser=/users/{userId}
-endpoint.updateUser=/users/{userId}
+endpoint.updateUser=/users
 
 #Comments
 endpoint.addComment=/comments
