--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ endpoint.updateUser=/users
 
 #Comments
 endpoint.addComment=/comments
+endpoint.addChildComment=/comments/{parentId}
 endpoint.getComment=/comments/{commentId}
 endpoint.getComments=/comments
 endpoint.getCommentsByEvent=/comments/events/{eventId}
@@ -46,5 +47,5 @@ db.password: dtsqem3237
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: create-drop
+hibernate.hbm2ddl.auto: validate
 entitymanager.packagesToScan: com.viseo.companion.domain
