Refactor and clean done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,10 @@ endpoint.getCommentsByEvent=/comments/events/{eventId}
 endpoint.deleteComment=/comments/{commentId}
 endpoint.updateComment=/comments
 
+#Likes
+endpoint.likeComment=/comments/{commentId}/like/{uzerId}
+endpoint.dislikeComment=/comments/{commentId}/like/{uzerId}
+
 #Actions
 endpoint.authenticate=/authenticate
 endpoint.resetPassword=/resetPassword
