--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,17 +11,17 @@ endpoint.uploadImage=/upload
 
 #Event Participant
 endpoint.getEventParticipants=/events/{eventId}/users
-endpoint.getEventParticipant=/events/{eventId}/users/{uzerId}
-endpoint.addEventParticipant=/events/{eventId}/users/{uzerId}
-endpoint.removeEventParticipant=/events/{eventId}/users/{uzerId}
-endpoint.getEventsByRegisteredUser=/events/users/{uzerId}
+endpoint.getEventParticipant=/events/{eventId}/users/{userId}
+endpoint.addEventParticipant=/events/{eventId}/users/{userId}
+endpoint.removeEventParticipant=/events/{eventId}/users/{userId}
+endpoint.getEventsByRegisteredUser=/events/users/{userId}
 
 #Users
 endpoint.addUser=/users
 endpoint.getUsers=/users
-endpoint.getUser=/users/{uzerId}
+endpoint.getUser=/users/{userId}
 endpoint.getUserByEmail=/users/emails/{pattern:.+}
-endpoint.deleteUser=/users/{uzerId}
+endpoint.deleteUser=/users/{userId}
 endpoint.updateUser=/users
 
 #Comments
@@ -34,8 +34,8 @@ endpoint.deleteComment=/comments/{commentId}
 endpoint.updateComment=/comments
 
 #Likes
-endpoint.likeComment=/comments/{commentId}/like/{uzerId}
-endpoint.dislikeComment=/comments/{commentId}/like/{uzerId}
+endpoint.likeComment=/comments/{commentId}/like/{userId}
+endpoint.dislikeComment=/comments/{commentId}/like/{userId}
 
 #Actions
 endpoint.authenticate=/authenticate
