--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ endpoint.updateComment=/comments
 
 #Likes
 endpoint.likeComment=/comments/{commentId}/like/{userId}
-endpoint.dislikeComment=/comments/{commentId}/like/{userId}
+endpoint.dislikeComment=/comments/{commentId}/dislike/{userId}
 
 #Actions
 endpoint.authenticate=/authenticate
@@ -71,5 +71,5 @@ db.password: dtsqem3237
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: create-drop
+hibernate.hbm2ddl.auto: validate
 entitymanager.packagesToScan: com.viseo.companion.domain
