--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
             <version>1.11.128</version>
         </dependency>
 
+        <!-- WebSocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
         <!-- Test -->
 
