--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,5 +73,5 @@ db.password: dtsqem3237
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: create-drop
+hibernate.hbm2ddl.auto: validate
 entitymanager.packagesToScan: com.viseo.companion.domain
