--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,10 @@ endpoint.authenticate=/authenticate
 endpoint.resetPassword=/resetPassword
 endpoint.changePassword= /changePassword
 
+#Notation
+endpoint.addNotation=/notation
+endpoint.getNotation=/notation/{eventId}
+endpoint.updateNotation=/notation
 ################### JavaMail Configuration ##########################
 
 # Email (MailProperties)
@@ -71,5 +75,5 @@ db.password: dtsqem3237
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: validate
+hibernate.hbm2ddl.auto: create-drop
 entitymanager.packagesToScan: com.viseo.companion.domain
