--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ endpoint.updateEvent=/events
 endpoint.getEvents=/events
 endpoint.getEventsExpired=/events/expire
 endpoint.uploadImage=/upload
+endpoint.getEventRating=/events/{eventId}/rating
 
 #Event Participant
 endpoint.getEventParticipants=/events/{eventId}/users
@@ -41,11 +42,10 @@ endpoint.dislikeComment=/comments/{commentId}/dislike/{userId}
 endpoint.authenticate=/authenticate
 endpoint.resetPassword=/resetPassword
 endpoint.changePassword= /changePassword
+#Review
+endpoint.addReview=/reviews
+endpoint.updateReview=/reviews
 
-#Notation
-endpoint.addNotation=/notation
-endpoint.getNotation=/notation/{eventId}
-endpoint.updateNotation=/notation
 ################### JavaMail Configuration ##########################
 
 # Email (MailProperties)
@@ -67,13 +67,13 @@ aws.credentials.secretKey=kKIDdLFxx94lxF+U2BMZeqe15aEBSVYfZIbxsd52
 ########## DataBase Configuration #########################################
 
 # Database
-db.driver: org.postgresql.Driver
-db.url: jdbc:postgresql://localhost:5432/viseocompanion
-db.username: companion
-db.password: dtsqem3237
+db.driver=org.postgresql.Driver
+db.url=jdbc:postgresql://localhost:5432/viseocompanion
+db.username=companion
+db.password=dtsqem3237
 
 # Hibernate
-hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
-hibernate.show_sql: true
-hibernate.hbm2ddl.auto: create-drop
-entitymanager.packagesToScan: com.viseo.companion.domain
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=create-drop
+entitymanager.packagesToScan=com.viseo.companion.domain
