fix participant OneToMany to ManyToMany

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,7 @@ endpoint.dislikeComment=/comments/{commentId}/dislike/{userId}
 endpoint.authenticate=/authenticate
 endpoint.resetPassword=/resetPassword
 endpoint.changePassword= /changePassword
+
 #Review
 endpoint.addReview=/reviews
 endpoint.updateReview=/reviews
@@ -75,5 +76,5 @@ db.password=dtsqem3237
 # Hibernate
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto= validate
 entitymanager.packagesToScan=com.viseo.companion.domain
