--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,7 @@ endpoint.changePassword= /changePassword
 #Review
 endpoint.addReview=/reviews
 endpoint.updateReview=/reviews
+endpoint.getReviewedEvents=/reviews/{userId}
 
 ################### JavaMail Configuration ##########################
 
