[Tech] Remove keys file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
+spring.profiles.include=aws,firebase, mail, db
 ########## REST routes #########################################
-
 #Events
 endpoint.addEvent=/events
 endpoint.getEvent=/events/{eventId}
@@ -9,14 +9,12 @@ endpoint.getEvents=/events
 endpoint.getEventsExpired=/events/expire
 endpoint.uploadImage=/upload
 endpoint.getEventRating=/events/{eventId}/rating
-
 #Event Participant
 endpoint.getEventParticipants=/events/{eventId}/users
 endpoint.getEventParticipant=/events/{eventId}/users/{userId}
 endpoint.addEventParticipant=/events/{eventId}/users/{userId}
 endpoint.removeEventParticipant=/events/{eventId}/users/{userId}
 endpoint.getEventsByRegisteredUser=/events/users/{userId}
-
 #Users
 endpoint.addUser=/users
 endpoint.getUsers=/users
@@ -24,7 +22,6 @@ endpoint.getUser=/users/{userId}
 endpoint.getUserByEmail=/users/emails/{pattern:.+}
 endpoint.deleteUser=/users/{userId}
 endpoint.updateUser=/users
-
 #Comments
 endpoint.addComment=/comments
 endpoint.addChildComment=/comments/{parentId}
@@ -33,49 +30,14 @@ endpoint.getComments=/comments
 endpoint.getCommentsByEvent=/comments/events/{eventId}
 endpoint.deleteComment=/comments/{commentId}
 endpoint.updateComment=/comments
-
 #Likes
 endpoint.likeComment=/comments/{commentId}/like/{userId}
 endpoint.dislikeComment=/comments/{commentId}/dislike/{userId}
-
 #Actions
 endpoint.authenticate=/authenticate
 endpoint.resetPassword=/resetPassword
-endpoint.changePassword= /changePassword
-
+endpoint.changePassword=/changePassword
 #Review
 endpoint.addReview=/reviews
 endpoint.updateReview=/reviews
 endpoint.getReviewedEvents=/reviews/{userId}
-
-################### JavaMail Configuration ##########################
-
-# Email (MailProperties)
-spring.mail.host=smtp.gmail.com
-spring.mail.password=dtsqem3237
-spring.mail.port=587
-spring.mail.protocol=smtp
-spring.mail.username=companionviseo@gmail.com
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-#AWS C
-amazon.s3.bucket=viseo-companion
-aws.region=eu-west-1
-aws.credentials.accessKey=AKIAJFGYUFU4GANDI65Q
-aws.credentials.secretKey=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
-
-
-########## DataBase Configuration #########################################
-
-# Database
-db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/viseocompanion
-db.username=companion
-db.password=dtsqem3237
-
-# Hibernate
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
-entitymanager.packagesToScan=com.viseo.companion.domain
