[GAct01] added Action, Activity & Mean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,6 @@ endpoint.getUser=/users/{userId}
 endpoint.getUserByEmail=/users/emails/{pattern:.+}
 endpoint.deleteUser=/users/{userId}
 endpoint.updateUser=/users
-
 #Comments
 endpoint.addComment=/comments
 endpoint.addChildComment=/comments/{parentId}
@@ -42,3 +41,11 @@ endpoint.changePassword=/changePassword
 endpoint.addReview=/reviews
 endpoint.updateReview=/reviews
 endpoint.getReviewedEvents=/reviews/{userId}
+#Action
+endpoint.addAction=/actions
+endpoint.getActions=/actions
+#Activity
+endpoint.addActivity=/activities
+#Mean
+endpoint.addMean=/means
+endpoint.getMeans=/means
