[GAct03Modify]   update Acitivity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,7 @@ endpoint.addAction=/actions
 endpoint.getActions=/actions
 #Activity
 endpoint.addActivity=/activities
+endpoint.updateActivity=/activities
 endpoint.getActivities=/activities
 #Mean
 endpoint.addMean=/means
