[#9Gact04_deleteAction] DeleteAction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,7 @@ endpoint.getActions=/actions
 endpoint.addActivity=/activities
 endpoint.updateActivity=/activities
 endpoint.getActivities=/activities
+endpoint.deleteActivity=/activities/{activityId}
 #Mean
 endpoint.addMean=/means
 endpoint.getMeans=/means
